# Rugged

./: .env.example  .gitignore  ONBOARDING.md  README.md  orchestrator.py  pyproject.toml  railpack.json
.claude/: launch.json
.github/workflows/: ci.yml
agents/: __init__.py  _goplus.py  _shared.py  consensus.py  contract_analyzer.py  onchain_flow_analyzer.py  social_signal_analyzer.py
api/: main.py
api/routes/: __init__.py  bundler.py  paymaster.py
chain/: __init__.py  factory.py  market.py  resolution.py  trace_registry.py  usyc.py
chain/abis/: Market.json  MarketFactory.json  Resolution.json  TraceRegistry.json
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployMarketFactory.s.sol  DeployPaymaster.s.sol
contracts/src/: Market.sol  MarketFactory.sol  ReputationBond.sol  Resolution.sol  RuggedPaymaster.sol  (+1 more)
data/: historical_markets.json  mint_address_map.json
project/: app.jsx  bond.css  bond.jsx  detail.css  index.html  markets.jsx  styles.css
resolver/: __init__.py  daemon.py  tracker.py
scripts/: deploy.sh  deploy_paymaster.sh  fund_paymaster.py  prune_mint_registry.py  seed_demo_markets.py  seed_historical.py  setup_entity_secret.py  smoke_test_e2e_userop.py  smoke_test_paymaster.py  smoke_test_sponsor_route.py
telegram-bot/: bot.py
tests/: conftest.py  test_api_markets.py  test_api_wallet.py
traces/: pin_trace.py
watcher/: __init__.py  diff_parser.py  metadata_fetcher.py  models.py  poller.py  price.py
web/: .npmrc  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
(+31 files in other folders)
