[project]
name = "rugged"
version = "0.1.0"
description = "Rugged — a tradable rugpull oracle on Arc. Backend services: commit watcher, multi-agent swarm, trace pinning, API, and Telegram bot."
requires-python = ">=3.11"

dependencies = [
    # shared
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    # chain
    "web3>=6.20",
    "eth-account>=0.13",
    # agents — LLM reasoning layer
    "anthropic>=0.40",
    # backend API (Phase 5)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # telegram alert bot (Phase 7)
    "python-telegram-bot>=21.0",
    # Circle Developer-Controlled Wallets SDK (entity secret + Phase 5)
    "circle-developer-controlled-wallets",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

# Not a packaged library — just a dependency environment for the service dirs
# (watcher/, agents/, traces/, api/, telegram-bot/, scripts/).
[tool.uv]
package = false
